test/spec_vectors/simd_i64x2_arith/fail/module_1.wat
(module (func (result v128) (i64x2.neg (i32.const 0))))